Profile screen error fixed
CSS error in profile resolved. Previously, the profile information was not displayed correctly, overflowing from the top. Now, it adapts, displaying everything correctly.

--- a/Phase2/EventCrafters/src/main/resources/static/css/profile.css
+++ b/Phase2/EventCrafters/src/main/resources/static/css/profile.css
@@ -438,3 +438,8 @@ becomes the last one in its parent element
     width: 200px;
     margin: 0 auto;
 }
+
+#main-container-profile {
+    height: 100vh; 
+}
+
